trunk/Archive2/d0/6d243cc45f0f60/output
+ g++-4.8 -std=c++1y -g main.cpp
main.cpp: In function 'int main()':
main.cpp:83:41: error: 'add_x' was not declared in this scope
     std::cout << typeid(decltype(add_x(a))).name() << std::endl; // should be Y<Z<X>>
                                         ^
